# fastapi_playground

./: pyproject.toml
src/: main.py
