[project]
name = "fastapi-playground"
version = "0.1.0"
description = "Just a place for me to have fun with FastAPI."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.129.2",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.41.0",
]

[dependency-groups]
lint = [
    "ruff>=0.15.2",
]
testing = [
    "pytest>=9.0.2",
]
